# feim

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/buffer/: mod.rs
crate/src/color/: mod.rs
crate/src/color/cmyk/: mod.rs
crate/src/color/convert/: mod.rs
crate/src/color/gray/: mod.rs
crate/src/color/gray16/: mod.rs
crate/src/color/nrgba/: mod.rs
crate/src/color/nrgba64/: mod.rs
crate/src/color/rgb/: mod.rs
crate/src/color/rgb48/: mod.rs
crate/src/image/: mod.rs
crate/src/image/farbfeld/: mod.rs
crate/src/image/farbfeld/stream/: mod.rs
crate/src/image/jpeg/: mod.rs
crate/src/image/jpeg/jpeg_buf/: mod.rs
crate/src/image/png/: mod.rs
crate/src/image/png/png_buf/: mod.rs
crate/src/image/webp/: mod.rs
crate/src/image/webp/webp_buf/: mod.rs
crate/src/serialize/: mod.rs
crate/src/specialized/: mod.rs
drivers/bentley/: Cargo.toml
drivers/bentley/src/: main.rs
drivers/bitlang/: Cargo.toml  expressions.toml
drivers/bitlang/src/: expression.rs  main.rs
drivers/blur/src/: main.rs
drivers/braille/: Cargo.toml
drivers/braille/src/: main.rs
drivers/candy/src/: main.rs
drivers/encode/src/: main.rs
drivers/font/: Cargo.toml
drivers/font/src/: main.rs
drivers/halftone/: Cargo.toml
drivers/halftone/src/: main.rs
drivers/invert/: Cargo.toml
drivers/invert/src/: main.rs
drivers/melt/: Cargo.toml
drivers/melt/src/: main.rs  prng.rs
drivers/multiply/: Cargo.toml
drivers/multiply/src/: main.rs
drivers/recur/: Cargo.toml
drivers/recur/src/: main.rs
drivers/resize/: Cargo.toml
drivers/resize/src/: main.rs
drivers/toff/: Cargo.toml
drivers/toff/src/: main.rs
drivers/topng/: Cargo.toml
drivers/topng/src/: main.rs
examples/: art.rs  blur.rs  candy.rs  decode.rs  encode.rs  toff.rs
examples/art/: Cargo.toml
examples/art/src/: main.rs
examples/bitlang/: Cargo.toml
examples/bitlang/src/: expression.rs  main.rs
examples/blur/: Cargo.toml
examples/blur/src/: main.rs
examples/candy/: Cargo.toml
examples/candy/src/: main.rs
examples/encode/: Cargo.toml
examples/encode/src/: main.rs
examples/halftone/src/: main.rs
examples/toff/: Cargo.toml
examples/toff/src/: main.rs
examples/topng/: Cargo.toml
examples/topng/src/: main.rs
scripts/: blur_many.sh  blur_once.sh
scripts/randexpr/: randexpr
src/: lib.rs
src/buffer/: mod.rs
src/color/: mod.rs
src/color/cmyk/: mod.rs
src/color/convert/: mod.rs
src/color/gray/: mod.rs
src/color/gray16/: mod.rs
src/color/nrgba/: mod.rs
src/color/nrgba64/: mod.rs
src/color/rgb/: mod.rs
src/color/rgb48/: mod.rs
src/image/: mod.rs
src/image/farbfeld/: mod.rs
src/image/jpeg/: mod.rs
src/image/jpeg/jpeg_buf/: mod.rs
src/image/png/: mod.rs
src/image/png/png_buf/: mod.rs
src/serialize/: mod.rs
src/specialized/: mod.rs
