[package]
name = "feim"
version = "0.7.0"
authors = ["Tiago Carvalho <sugoiuguu@tfwno.gf>"]
edition = "2018"

[features]
default = ["fmt-farbfeld", "fmt-jpeg"]
fmt-jpeg = ["jpeg-encoder", "jpeg-decoder"]
fmt-png = ["png"]
fmt-farbfeld = []

[dependencies]
jpeg-decoder = { version = "0.2", optional = true }
jpeg-encoder = { version = "0.4", optional = true }
png = { version = "0.17", optional = true }
