[package]
name = "feim"
version = "0.9.0"
authors = ["Tiago Carvalho <sugoiuguu@tfwno.gf>"]
edition = "2018"

[features]
default = ["fmt-farbfeld", "fmt-jpeg"]
fmt-jpeg = ["jpeg-encoder", "jpeg-decoder"]
fmt-png = ["png"]
fmt-farbfeld = []

[dependencies]
jpeg-encoder = { version = "0.5", features = ["simd"], optional = true }
jpeg-decoder = { version = "0.2", features = ["nightly_aarch64_neon"], optional = true }
png = { version = "0.17", optional = true }
