[package]
name = "feim"
version = "0.17.0"
authors = ["Tiago Carvalho <sugoiuguu@tfwno.gf>"]
edition = "2018"

[features]
default = []
enable-all-formats = ["fmt-farbfeld", "fmt-jpeg", "fmt-png", "fmt-webp"]
fmt-jpeg = ["jpeg-encoder", "jpeg-decoder"]
fmt-png = ["png"]
fmt-farbfeld = []
fmt-webp = ["webp"]

[dependencies]
jpeg-encoder = { version = "0.5", features = ["simd"], optional = true }
jpeg-decoder = { version = "0.3", features = ["nightly_aarch64_neon"], optional = true }
png = { version = "0.17", optional = true }
webp = { version = "0.2", default-features = false, optional = true }
