[package]
name = "feim"
version = "0.19.0"
authors = ["Tiago Carvalho <sugoiuguu@tfwno.gf>"]
edition = "2018"

[features]
default = []
enable-all-formats = [
    "fmt-farbfeld", "fmt-jpeg", "fmt-png", "fmt-webp",
]
fmt-jpeg = ["jpeg-encoder", "jpeg-decoder"]
fmt-png = ["png"]
fmt-farbfeld = []
fmt-webp = ["webp", "either"]

[dependencies]
either = { version = "1.8", optional = true }
jpeg-encoder = { version = "0.5", features = ["simd"], optional = true }
jpeg-decoder = { version = "0.3", features = ["nightly_aarch64_neon"], optional = true }
png = { version = "0.17", optional = true }

[dependencies.webp]
git = "https://github.com/jaredforth/webp"
rev = "9b602d7787c7f7cdccbea9d421582c1b617a7761"
default-features = false
optional = true
