[package]
name = "bitlang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flume = "0.10"
itertools = "0.10"
rayon = "1.5"
feim = { path = "../../crate", features = ["fmt-farbfeld-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
toml = "0.5"

[dev-dependencies]
proptest = "1.0"
